--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <section class="mitten">
         <div class="container">
             <div class="mitten-body">
-                <h1>Shopping is<strong>MORE FUN</strong></h1>
+                <h1>Shopping is<strong> MORE FUN</strong></h1>
                 <p>MASSA TEXT OM HUR KUL SHOPPING ÄR :D</p>
                 <a href="#" class="btn btn-mitten">SHOP NOW</a>
             </div>
@@ -133,7 +133,7 @@
                     <img src="images/Group 1155.svg" alt="Free shipping">
                     <div>
                         <h1>Free shipping</h1>
-                        <p>for local bnlablablabla</p>
+                        <p>for local bnlablablabla bnlablablablabnlablablablabnlablablabla</p>
                     </div>
                 </div>
                 
