bilder och reponsiv

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <img src="images/Group 1155.svg" alt="Free shipping">
                     <div>
                         <h1>Free shipping</h1>
-                        <p>for local bnlablablabla bnlablablablabnlablablablabnlablablabla</p>
+                        <p>For a local customer, we provide free shipping facility</p>
                     </div>
                 </div>
                 
@@ -141,21 +141,21 @@
                     <img src="images/24 icon.svg" alt="24/7">
                     <div>
                         <h1>24/7</h1>
-                        <p>for local bnlablablabla</p>
+                        <p>For any inquiry, we are available 24 hours every day</p>
                     </div>
                 </div>
                 <div class="info-box">
                     <img src="images/payment icon.svg" alt="online pay">
                     <div>
                         <h1>Online pay</h1>
-                        <p>for local bnlablablabla</p>
+                        <p>You can pay quickly and easily with our online payment system</p>
                     </div>
                 </div>
                 <div class="info-box">
                     <img src="images/Outline.svg" alt="free deliv">
                     <div>
                         <h1>Free delivcery</h1>
-                        <p>for local bnlablablabla</p>
+                        <p>We understand your urgency and we deliver in a fast way</p>
                     </div>
                 </div>
             </div>   
