--- a/index.html
+++ b/index.html
@@ -341,7 +341,21 @@
             </div>
         </section>
 
-
+        
+        <!-- 30% off -->
+        <section class="thirty-percent">
+            <div class="container">
+                    <div class="thirty-off">
+                        <h1><strong>30%</strong> OFF</h1>
+                        <p>FOR NEW CUSTOMER</p>
+                        <a href="#" class="btn">SHOP NOW</a>
+                    </div>
+                    <div class="learn-more">
+                        <p>Donec pulvinar arcu vitae ipsum varius cursus. Nunc iaculis fermentum iaculis. Nunc pulvinar purus at erat lacinia, ut convallis nibh consequat. Integer nulla nisi, aliquam at tellus a, viverra scelerisque purus. Nam pretium iaculis ultrices.</p>
+                        <a href="#" class="btn">Learn More</a>
+                    </div>
+            </div>
+        </section>
         
 
 
