transition och transform

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
             <div class="container">
                     <div class="thirty-off">
                         <h1><strong>30%</strong> OFF</h1>
-                        <p>FOR NEW CUSTOMER</p>
+                        <p>FOR NEW CUSTOMERS</p>
                         <a href="#" class="btn">SHOP NOW</a>
                     </div>
                     <div class="learn-more">
