--- a/login.html
+++ b/login.html
@@ -126,10 +126,10 @@
 
 <!-- BREADCRUMB SOON tm -->
 
-<section class="brödsmula">
+<section class="breadcrumb">
     <div class="container">
         <h1>My Account</h1>
-        <ul class="smulspår">
+        <ul class="breadlinks">
             <li><a href="index.html">Home</a></li>
             <li>My Account</li>
         </ul>
